<resources>
    <string name="app_name">BookApp</string>
    <string name="mobile_number">Enter Your Mobile Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget password?</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourite_fragment_text">Favourite</string>
    <string name="profile_fragment_text">Profile</string>
    <string name="about_app">About App</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="check_internet">Check Internet</string>
    <string name="add_to_favourite">ADD TO FAVOURITES</string>
    <string name="action_sort">Sort</string>
</resources>