<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/tool_bar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/teal_700"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tool_bar">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutContent"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:weightSum="6">

          <ImageView
              android:id="@+id/imgBookImage"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1.5"
              android:padding="5dp"
              android:scaleType="centerCrop"
              android:src="@mipmap/ic_launcher"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.3">
            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_book"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:padding="5dp"/>

           <TextView
               android:id="@+id/txtAuthorName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/name_of_the_author"
               android:layout_below="@+id/txtBookName"
               android:textColor="#000000"
               android:padding="5dp"
               android:textStyle="normal"
               android:textSize="15sp"/>

           <TextView
               android:id="@+id/txtBookPrice"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Rs. 299"
               android:textColor="#357a38"
               android:textSize="15sp"
               android:layout_below="@+id/txtAuthorName"
               android:padding="5dp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/txtBookRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:padding="4dp"
                android:drawablePadding="4dp"
                android:text="4.5"
                android:textColor="#ffc828"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_rating" />
            
        </LinearLayout>
    
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@+id/linearLayoutContent">

         <TextView
             android:id="@+id/txtAboutTheBookStatic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="About the Book:"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"/>

         <TextView
             android:id="@+id/txtBookDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="6dp"
             android:layout_below="@+id/txtAboutTheBookStatic"
             android:textSize="18sp"
             android:text="@string/hello_blank_fragment"
             android:textColor="#000000"
             android:layout_margin="10dp"/>

       </RelativeLayout>
   </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/teal_700"
        android:text="@string/add_to_favourite"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="19sp"/>

    <RelativeLayout
        android:id="@+id/progressBarRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/progressBarRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
a
</RelativeLayout>